--- a/.htaccess
+++ b/.htaccess
@@ -8,7 +8,7 @@ RewriteBase /
 RewriteRule ^$ index\.php?p=site&id=1
 RewriteRule ^page([0-9]{1,20})/?$ index\.php?p=site&id=$1
 RewriteRule ^(login|admin|galery)/?$ index\.php?p=$1
-RewriteRule ^admin/(changepass|textlogo|menutop|menuleft|galery)/?$ index\.php?p=admin&d=$1
+RewriteRule ^admin/(changepass|textlogo|menutop|menuleft|menuall|galery)/?$ index\.php?p=admin&d=$1
 RewriteRule ^admin/page([0-9]{1,20})/edit/?$ index\.php?p=admin&d=pageedit&id=$1
 RewriteRule ^admin/galery/id([0-9]{1,20})/?$ index\.php?p=admin&d=galeryedit&id=$1
 
